Video editor channel compositing blend effect does not refresh when underlying channel is muted/unmuted #103852

Closed
opened 2023-01-13 05:27:30 +01:00 by Mark Stead · 5 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.02

Blender Version
Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: 55485cb379
Worked: I've tried Blender 3.2.2 and see the same.

Short description of error
When using compositing blend modes on an NLE strip, the effect shown in the UI does not refresh if the underlying channel is muted/unmuted. Certain operations (like Refresh All) will fix the UI. Timeline render is unaffected.

Exact steps for others to reproduce the error
Start Blender in Video Editing mode, and add 3 images/videos to the timeline, placing each on a separate channel at frame 1.
Change the Blend mode of the top strip, in this case I've set it to Add mode.
image.png
Mute channel 2, and I would expect the result to show channel 1 and 3 added, however the UI does not update and still shows a composite of channel 2 and 3.
image.png
If you move (grab) any of the strips on the timeline, even if you press escape to cancel the move then the image at frame 1 is recalculated. Or easier still just press Ctrl+R.
image.png

I tried disabling Strip Proxy & Timecode but it doesn't make any difference.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.02 **Blender Version** Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: `55485cb379` Worked: I've tried Blender 3.2.2 and see the same. **Short description of error** When using compositing blend modes on an NLE strip, the effect shown in the UI does not refresh if the underlying channel is muted/unmuted. Certain operations (like Refresh All) will fix the UI. Timeline render is unaffected. **Exact steps for others to reproduce the error** Start Blender in Video Editing mode, and add 3 images/videos to the timeline, placing each on a separate channel at frame 1. Change the Blend mode of the top strip, in this case I've set it to Add mode. ![image.png](https://archive.blender.org/developer/F14146970/image.png) Mute channel 2, and I would expect the result to show channel 1 and 3 added, however the UI does not update and still shows a composite of channel 2 and 3. ![image.png](https://archive.blender.org/developer/F14146972/image.png) If you move (grab) any of the strips on the timeline, even if you press escape to cancel the move then the image at frame 1 is recalculated. Or easier still just press Ctrl+R. ![image.png](https://archive.blender.org/developer/F14146980/image.png) I tried disabling Strip Proxy & Timecode but it doesn't make any difference.
Author

Added subscriber: @MarkStead-2

Added subscriber: @MarkStead-2
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

This issue was referenced by ad146bd17a

This issue was referenced by ad146bd17a813fd1c40f83876141571ca221642a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2023-01-30 06:50:51 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103852
No description provided.