Fix T103852: Muting timeline channel does not update image

Add RNA update function to invalidate cache for all strips in channel.